Fixed apparatus table spacing.

--- a/ui/app.css
+++ b/ui/app.css
@@ -62,7 +62,7 @@
     font-style:italic;
     padding-right:10px;
     padding-left: 3px;
-    position:absolute; 
+    position:relative; 
     left:0;
     top:auto;
     background-color:white;
